<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dashboardAppBar"
    android:layout_width="match_parent"
    android:layout_height="320dp"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.CollapsingToolbarLayout
        android:id="@+id/collapsingToolbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

        <ImageView
            android:id="@+id/iv_background"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:adjustViewBounds="true"
            android:contentDescription="@string/background"
            android:scaleType="centerCrop"
            android:src="@drawable/background"
            app:layout_collapseMode="parallax" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_dashboard_header"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/iv_logo"
                android:layout_width="@dimen/logo_dimen"
                android:layout_height="@dimen/logo_dimen"
                android:layout_centerInParent="true"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:contentDescription="@string/avatar"
                android:src="@drawable/github_logo"
                app:layout_collapseMode="parallax"
                app:layout_constraintBottom_toTopOf="@id/tv_author"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@tools:sample/avatars" />

            <TextView
                android:id="@+id/tv_author"
                style="@style/Theme.GitHubMate.Text.LabelMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/auth_username"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_logo" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/dimen_16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_author">

                <LinearLayout
                    android:id="@+id/ll_dashboard_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true">

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_search"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:layout_weight="1"
                        android:text="@string/search_github_friend"
                        android:textColorHint="@color/primary_50"
                        app:icon="@drawable/ic_search" />

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btn_favorite"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_weight="1"
                        android:text="@string/favorite"
                        android:textColorHint="@color/primary_50"
                        app:icon="@drawable/ic_favorite_outlined" />
                </LinearLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_setting"
                    style="@style/Widget.Material3.Button.OutlinedButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/ll_dashboard_button"
                    android:layout_centerHorizontal="true"
                    android:text="@string/setting"
                    android:textColorHint="@color/primary_50"
                    app:icon="@drawable/ic_setting" />
            </RelativeLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:expandedTitleTextAppearance="@android:color/transparent"
            app:layout_collapseMode="pin">

            <RelativeLayout
                android:id="@+id/rl_toolbar_dashboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_toolbar_logo"
                    android:layout_width="@dimen/dimen_24dp"
                    android:layout_height="@dimen/dimen_24dp"
                    android:layout_alignParentStart="true"
                    android:layout_centerInParent="true"
                    android:layout_marginTop="@dimen/dimen_24dp"
                    android:layout_marginEnd="@dimen/dimen_8dp"
                    android:contentDescription="@string/avatar"
                    android:src="@drawable/github_logo"
                    app:layout_collapseMode="parallax"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/tv_toolbar_username"
                    style="@style/Theme.GitHubMate.Text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/btn_toolbar_search"
                    android:layout_toEndOf="@id/iv_toolbar_logo"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/auth_username" />

                <ImageButton
                    android:id="@+id/btn_toolbar_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/btn_toolbar_favorite"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/search"
                    android:paddingHorizontal="@dimen/dimen_16dp"
                    android:paddingVertical="@dimen/dimen_16dp"
                    android:src="@drawable/ic_search" />

                <ImageButton
                    android:id="@+id/btn_toolbar_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toStartOf="@+id/btn_toolbar_setting"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/search"
                    android:paddingHorizontal="@dimen/dimen_16dp"
                    android:paddingVertical="@dimen/dimen_16dp"
                    android:src="@drawable/ic_favorite_outlined" />

                <ImageButton
                    android:id="@+id/btn_toolbar_setting"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/search"
                    android:paddingHorizontal="@dimen/dimen_16dp"
                    android:paddingVertical="@dimen/dimen_16dp"
                    android:src="@drawable/ic_setting" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.CollapsingToolbarLayout>

</com.google.android.material.appbar.AppBarLayout>
